rnsc/test_data/rns_integration/error/parser/type_hints/string/trailing_token_recovers.rns
.class @string "Hello" unexpected_second_operand
.super java/lang/Object
